Fixed alignment issues with index.html and services.html

--- a/css/index.css
+++ b/css/index.css
@@ -170,11 +170,12 @@ body {
   padding: 30px 0;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav a {
   justify-self: center;
-  margin-right: 59px;
+  margin-right: 58px;
   text-decoration: none;
   color: grey;
 }
@@ -361,6 +362,10 @@ footer {
 @media only screen and (max-width: 500px) {
   .nav img {
     margin-bottom: 20px;
+  }
+
+  .nav a {
+    margin-right: 0px;
   }
 
   .navItem {
